#add_executable(Lab1CPP lab1.cpp)
#target_include_directories(Lab1CPP PUBLIC ../LibraryCPP)
#target_link_libraries(Lab1CPP LibraryCPP)

#add_test(NAME TestLab1CPP COMMAND Lab1CPP ${CMAKE_CURRENT_SOURCE_DIR}/input.txt)
#set_property(TEST TestLab1CPP PROPERTY PASS_REGULAR_EXPRESSION "0 1 1 2 3 5 8 13 21 34.*2")
